section-6-Networking-in-Kubernetes/externalname-service.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: externalname-service

---
apiVersion: v1
kind: Service
metadata:
  name: external-name-service
  namespace: externalname-service
spec:
  type: ExternalName
  externalName: my.ext.example.com
