section-6-Networking-in-Kubernetes/nodeport-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-deployment
    env: test
  name: nginx-service
  namespace: nginx-deployment
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-deployment
    env: test
  type: NodePort
