section-6-Networking-in-Kubernetes/ingress-configuration-example.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-web


# ConfigMap for nginx vhost configs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-deployment-web
    env: test
  name: nginx-deployment-web
  namespace: nginx-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deployment-web
      env: test
  template:
    metadata:
      labels:
        app: nginx-deployment-web
        env: test
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config-web
          mountPath: /etc/nginx/conf.d
        - name: nginx-html-file
          mountPath: /usr/share/nginx/html/web
      volumes:
      - name: nginx-config-web
        configMap:
          name: nginx-config-web  
      - name: nginx-html-file
        configMap:
          name: html-file

# Service to expose NGINX deployment
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-deployment-web
    env: test
  name: web-service
  namespace: nginx-web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-deployment-web
    env: test
  type: ClusterIP


# Ingress Object 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: web-ingress
  namespace: nginx-web
spec:
  rules:
  - host: web.example.com
    http:
      paths:
      - backend:
          service:
            name: web-service
            port:
              number: 80
        path: /web
        pathType: Prefix
